deploy/openshift/07-route-reencrypt.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tlsbench-reencrypt
  namespace: tlsbench
  labels:
    app.kubernetes.io/name: tlsbench
    tlsbench.termination: reencrypt
spec:
  to:
    kind: Service
    name: tlsbench
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
    # destinationCACertificate is required. After the pod has written /certs/ca.crt:
    #   ./scripts/patch-reencrypt-ca.sh tlsbench tlsbench tlsbench-reencrypt
    # Do not benchmark this Route until that patch succeeds (otherwise HAProxy cannot verify the pod).
